5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1633_2918.log
== TEST (2019-04-02 19:04:16) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*0.2)
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:04:22) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*0.2)
print(round(total, 2))



-- EXECUTION TIME:
0.106457
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:26) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*0.2)
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:05:14) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:18) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.141961
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:05:19) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:05:33) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(b*(20/100))
print(round(total, 2))



-- OUTPUT:
27.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(b*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.177492
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
27.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
25.35
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
41.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:05:38) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(b*(20/100))
print(round(total, 2))



-- OUTPUT:
27.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:40) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:06:47) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.18022
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:15) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
float(print(round(total, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(print(round(total, 2)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:22) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
float(print(round(total, 2)))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(print(round(total, 2)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2)))



-- ERROR:
File "XXXX", line 4
    print(round(total, 2)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:30) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2)))



-- ERROR:
File "XXXX", line 4
    print(round(total, 2)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:33) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:33) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a*b(a-(a*20/100))
print(round(total, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=a*b(a-(a*20/100))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=float(input("quantidade de ingressos: "))
total=a*b(a-(a*20/100))
print(round(total, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=a*b(a-(a*20/100))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:41) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a**(20/100))
print(round(total, 2))



-- OUTPUT:
26.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:09:50) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a**(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.142174
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
26.55
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
25.02
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
40.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:50) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a**(20/100))
print(round(total, 2))



-- OUTPUT:
26.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:55) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:09:59) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.213392
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:00) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:10:43) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.158826
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:43) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:10:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.205721
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:59) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:03) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total, 2))



-- EXECUTION TIME:
0.147751
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:03) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:25) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total1, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:29) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total1, 2))



-- EXECUTION TIME:
0.143455
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:11:30) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total1, 2))



-- EXECUTION TIME:
0.122088
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:30) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=a-(a*(20/100))
print(round(total1, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total1=a-(a*(20/100))
print(round(total1, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:38) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)-(20/100)
print(round(total, 2))



-- OUTPUT:
142.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:13:44) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)-(20/100)
print(round(total, 2))



-- EXECUTION TIME:
0.224955
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.3
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.4
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:44) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)-(20/100)
print(round(total, 2))



-- OUTPUT:
142.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)- 0.2%
print(round(total, 2))



-- ERROR:
File "XXXX", line 3
    total=(a*b)- 0.2%
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:29) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)- 0.2%
print(round(total, 2))



-- ERROR:
File "XXXX", line 3
    total=(a*b)- 0.2%
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=(a*b)- 0.2
print(round(total, 2))



-- OUTPUT:
142.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a-(a*(20/100))
print(round(total, 2))



-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:52) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
print(round(total, 2))



-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:35) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
total=a*b
total1=total - (20/100)
print(round(total1, 2))



-- OUTPUT:
142.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:05) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:22) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:23) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:24) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:29) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:42) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:43) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:47) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
vp=a-(a*(20/100))
print(round(vp, 2)
		
-- ERROR:
File "XXXX", line 6
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:57) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))

		
-- ERROR:
File "XXXX", line 6
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:57) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=a-(a*(20/100))
print(round(preco, 2))
		
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:10) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)-a-(a*(20/100))
print(round(preco, 2))
		
-- OUTPUT:
108.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:19) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)-a-(a*(20/100))
print(round(preco, 2))
		
-- OUTPUT:
108.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:27:19) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)-a-(a*(20/100))
print(round(preco, 2))
		
-- EXECUTION TIME:
0.190518
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
108.3
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
183.26
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
valor do ingresso: quantidade de ingressos: 76.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:09) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco-(20/100)
print(round(preco, 2))
		
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:44) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*20/100)
print(round(preco, 2))
		
-- ERROR:
File "XXXX", line 4
    tot=preco*20/100)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:55) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(preco, 2))
		
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:02) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(preco, 2))
		
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:41) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
		
-- ERROR:
File "XXXX", line 7
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:46) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:47) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:47) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:48) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:49) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:49) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:49) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:49) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:50) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:50) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:04) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot,2)
-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:05) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
tot=preco*(20/100)
print(round(tot,2)
-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:21) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
print(round(tot,2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:22) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
print(round(tot,2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:22) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
print(round(tot,2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:23) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
print(round(tot,2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:23) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
preco=(a*b)
print(round(tot,2)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:42) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:31:28) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=tot*(20/100)
print(round(promo, 2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:32:32) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=tot*(20/100)
print(round(tot, 2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:33:14) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=tot-(a*(20/100))
print(round(tot, 2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:33:52) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=tot-(a*(20/100))
print(round(promo, 2))
-- OUTPUT:
136.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:34:18) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
print(round(promo, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:34:39) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
print(round(tot, 2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:31) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(b*(20/100))
print(round(tot, 2))
-- OUTPUT:
27.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(b*(20/100))
print(round(tot, 2))
-- OUTPUT:
27.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:35:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(b*(20/100))
print(round(tot, 2))
-- EXECUTION TIME:
0.17872
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
27.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
25.35
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
valor do ingresso: quantidade de ingressos: 41.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:53) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(a*(20/100))
tot1=a*b
print(round(tot, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:01) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(a*(20/100))
tot1=a*b
print(round(tot1 2))
-- ERROR:
File "XXXX", line 5
    print(round(tot1 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:12) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(a*(20/100))
tot1=a*b
print(round(tot1, 2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:24) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a-(a*(20/100))
tot1=a*b
print(round(tot, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:24) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot1=a*b
tot=a-(a*(20/100))
print(round(tot, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:54) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*(0.2))
print(round(promo, 2))
-- OUTPUT:
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:08) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*(0.2))
tot=a*b
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:33) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*0.2)
tot=a*b
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:09) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*(20/100))
tot=a*b
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:43) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*(20/100))
tot=a*b
vp=promo-tot
print(round(vp, 2))
-- OUTPUT:
-119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:44:00) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
promo=a-(a*(20/100))
tot=a*b
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:00) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:25) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*0,2)
vp=tot-promo
print(round(vp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    promo=a-(a*0,2)
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:53) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
float(promo=a-(a*0,2))
vp=tot-promo
print(round(vp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(promo=a-(a*0,2))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:23) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:53) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
float(print(round(vp, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float(print(round(vp, 2)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:16) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:58) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=tot-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
5.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:31) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- OUTPUT:
119.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:49:37) 
-- CODE:
a=float(input("valor do ingresso: "))
b=int(input("quantidade de ingressos: "))
tot=a*b
promo=a-(a*(20/100))
vp=tot-promo
print(round(vp, 2))
-- EXECUTION TIME:
0.192954
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
119.7
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
194.04
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
valor do ingresso: quantidade de ingressos: 93.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
